srv/rocketchat/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rocketchat-database
spec:
  template:
    metadata:
      labels:
        app: rocketchat
        tier: backend
    spec:
      containers:
      - name: rocketchat-database
        image: mongo:3.6
        ports:
          - name: mongo
            containerPort: 27017
        volumeMounts:
        - name: rocketchat-storage
          mountPath: /data/db
      volumes:
      - name: rocketchat-storage
        persistentVolumeClaim:
          claimName: rocketchat-storage-pvc

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rocketchat-app
spec:
  template:
    metadata:
      labels:
        app: rocketchat
        tier: frontend
    spec:
      containers:
      - name: rocketchat-app
        image: rocketchat/rocket.chat:latest
        ports:
          - name: http
            containerPort: 3000
