srv/rocketchat/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-database
  labels:
    app: rocketchat
    tier: backend
spec:
  ports:
  - port: 27017
    targetPort: mongo
  selector:
    app: rocketchat
    tier: backend

---

apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  labels:
    app: rocketchat
    tier: frontend
spec:
  ports:
    - name: webui
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: rocketchat
    tier: frontend
