srv/rocketchat/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-database
  labels:
    app: rocketchat
    tier: backend
spec:
  ports:
  - port: 27017
    targetPort: mongo
  selector:
    app: rocketchat
    tier: backend
