srv/rocketchat/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: rocketchat
  annotations:
    kubernetes.io/ingress.class: tectonic
spec:
  tls:
    - hosts:
        - chat.sj.ifsc.edu.br
      secretName: tls-ifsc-sje
  rules:
    - host: chat.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: rocketchat
              servicePort: 3000
status:
  loadBalancer:
    ingress:
      - ip: 191.36.8.24
      - ip: 191.36.8.25
